@@ -1,3 +1,9 @@
+2002-10-26  Adam Fedor  <fedor@gnu.org>
+
+	* Source/NSException.m: Document.
+	* Source/NSFileHandle.m: Partial Documentation.
+	* Source/NSObject.m: Fix typo in docs.
+
 2002-10-25  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* Source/NSBundle.m ([NSBundle -load]): set _codeLoaded before loading
